fixed z-index

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -624,7 +624,7 @@ button {
   font-size: 2rem;
   padding: 0;
   cursor: pointer;
-  z-index: 10;
+  z-index: 2;
 }
 
 .carousel-control-prev:hover,
